<resources>
    <string name="app_name">Recruitica</string>
    <string name="menuHome">Home</string>
    <string name="menuCandidate">Candidate</string>
    <string name="menuLogin">Login</string>
    <string name="intoLogo_description">Recruitica logoImageView</string>
    <string name="introTextView">Welcome to Recruitica!\nDiscover and Connect</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="loginButton">Login</string>
    <string name="recycler_image">Nitin Mishra</string>
    <string name="recycler_TextView">Android App Developer</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="connect">Connect</string>
    <string name="profilepicture">profilePicture</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_out">Log out</string>
    <string name="logout">Logout</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="location">Location</string>
    <string name="name">Name</string>
    <string name="welcome_to_recruitica">Welcome to Recruitica</string>
    <string name="connect_learn_and_grow_your_professional_network">Connect, Learn, and Grow Your Professional Network with Recruitica</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="already_have_an_account">Already have an account ? </string>
    <string name="create_new_account">Create new account</string>
    <string name="confirm_password">Confirm Password</string>
</resources>